--- a/WebContent/css/emplist.css
+++ b/WebContent/css/emplist.css
@@ -1,23 +1,49 @@
 @charset "UTF-8";
 
-
- table {
-    width: 100%;
-    border-top: 3px solid black;
-    border-collapse: collapse;
-  }
-  
-thead td{
-   border: 1px solid #ddd;
-   font-weight: bolder;
-   background-color: skyblue;
+table {
+	width: 100%;
+	border-top: 3px solid black;
+	border-collapse: collapse;
 }
 
-h2{
+thead td {
+	border: 1px solid #ddd;
+	font-weight: bolder;
+	background-color: skyblue;
+}
+
+h2 {
 	text-align: center;
 }
-tr, td{
-   border: 1px solid #ddd; 
-    padding: 10px;
-   text-align: center;
+
+tr, td {
+	border: 1px solid #ddd;
+	padding: 10px;
+	text-align: center;
+}
+
+
+/* empAdd.jsp */
+
+ul {
+	list-style: none;
+}
+
+li {
+	margin: 20px;
+}
+
+li label {
+	width: 120px;
+	float: left;
+}
+
+li select, input {
+	width: 150px;
+	height: 21px;
+	box-sizing: border-box;
+}
+
+fieldset {
+	margin: 15px;
 }
